# Self-study_project

./: .env.sample  README.md  learning_data.json  pyproject.toml  user_data.json
apps/learning/: admin.py  models.py  pagination.py  permissions.py  tests.py  urls.py
apps/learning/migrations/: 0001_initial.py  0002_initial.py  0003_test_material.py  0004_alter_test_material.py  0005_useranswer_delete_try.py  0006_alter_useranswer_user.py  0007_delete_subscription.py  0008_useranswer_test_alter_question_test_and_more.py  0009_remove_useranswer_test_useranswer_test.py  0010_remove_useranswer_test.py  0011_alter_material_material_name_and_more.py
apps/learning/serializers/: answer.py  material.py  question.py  section.py  test.py  user_answer.py
apps/learning/views/: answer.py  material.py  question.py  section.py  test.py  user_answer.py
apps/user/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/user/management/commands/: csu.py
apps/user/migrations/: 0001_initial.py
config/: settings.py  urls.py
